--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
   <table>
     <thead>
       <tr>
-        <th>Dates</th>
-        <th>Position</th>
+        <th>Skills</th>
+        <th>Rating</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>2020 - 2021</td>
-        <td>Little Ceasar's <em><strong>Cashier</strong></em></td>
+        <td>Soldering</td>
+        <td>⭐️⭐️⭐️<em></td>
       </tr>
       <tr>
-        <td>2021 - 2022</td>
-        <td>Cinemark Majestic Cinemas <em><strong>Usher</strong></em></td>
+        <td>Programming</td>
+        <td>⭐️⭐️</td>
       </tr>
       <tr>
-        <td>2022 - Now</td>
-        <td>Periapt Technologies <em><strong>Engineer</strong></em></td>
+        <td>Breakdancing</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
     </tbody>
   </table>
