--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,13 @@
     </ul>
     <br />
 
-  <form class="" action="index.html" method="post">
+  <form action="index.html" method="post" enctype="text/plain">
     <label>Your Name</label>
-    <input type= "text"> <br />
+    <input type= "text" name="yourName"> <br />
     <label>Your Email</label>
-    <input type="email"> <br /> <br />
+    <input type="email" name="yourEmail"> <br /> <br />
     <label> Your Message</label> <br>
-    <textarea name="name" rows="10" cols="30"></textarea>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea>
     <input type="submit">
   </form>
   </body>
